rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__funny-uipadding__decoded.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: UIPadding
  class: UIPadding
  properties:
    Attributes:
      Attributes: {}
    PaddingBottom:
      UDim:
        - 13.37
        - 42
    PaddingLeft:
      UDim:
        - -13.37
        - 42
    PaddingRight:
      UDim:
        - 13.37
        - -42
    PaddingTop:
      UDim:
        - -13.37
        - -42
    Tags:
      Tags: []
  children: []
